# intent-aligned-clustering

./: .gitignore  README.md  analyze_sankey.py  main.py  prompt.txt  pyproject.toml  run_ablation.sh  run_ablation_no_postproc.sh  run_ljs_ablation.py  run_ljs_ablation.sh  sample.csv  sample_gt.csv  sample_with_labels.csv
data/: README.md  transfer.py
data/20news/: domain_direct_intent.txt  guided_proxy_intent.txt  prompt.txt  sample.csv  sample_gt.csv  sample_with_labels.csv
data/amazon/: domain_direct_intent.txt  minimal_dicovery_intent.txt  prompt.txt  sample.csv  sample_gt.csv  sample_with_labels.csv
data/arxiv/: domain_direct_intent.txt  sample.csv  sample_with_labels.csv
data/gomotion/: domain_direct_intent.txt  guided_proxy_intent.txt  prompt.txt  sample.csv  sample_gt.csv  sample_with_labels.csv
data/newsSentiment/: domain_direct_intent.txt  guided_proxy_intent.txt  sample.csv  sample_gt.csv  sample_gt1.csv  sample_gt2.csv  sample_with_labels.csv  sample_with_labels_1.csv  sample_with_labels_2.csv
data/sarcasm/: domain_direct_intent.txt  final.csv  prompt.txt  sample.csv  sample_gt.csv  (+1 more)
llm-as-a-judge/: README.md  __init__.py  __main__.py  evaluator.py  judge.py  prompts.py  report.py  rubric.py  run_ljs_ablation.py  sampler.py
sankey-visualization/: README.md  analyze_sankey.py  sankey-diagram-v2  sankey-diagram.url  sankey.json
scripts/: baseline.sh  evaluate.sh  framework.sh  new_baseline.sh  run_ablation.sh  run_ljs_ablation.sh
src/: baseline.py  bertopic.py  evaluate.py  main.py  prompts.py
src2/: README.md  main.py  prompts.py
(+19 files in other folders)
