[project]
name = "intent-aligned-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cluster-scoring",
    "ollama>=0.6.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
cluster-scoring = { git = "https://github.com/GNITOAHC/cluster-scoring.git" }
