[project]
name = "intent-aligned-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cluster-scoring",
    "datasets>=5.0.0",
    "ollama>=0.6.0",
    "openai>=2.7.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[project.scripts]
baseline = "iac.cli:run_baseline"
bertopic = "iac.cli:run_bertopic"
iac = "iac.cli:run_iac"
evaluate = "iac.cli:run_evaluate"

[tool.uv.sources]
cluster-scoring = { git = "https://github.com/GNITOAHC/cluster-scoring.git" }

[tool.uv]
package = true

[project.optional-dependencies]
bertopic = ["bertopic==0.17.4"]
